brat/test/golden/imports/alias-clash.brat.golden
Error in alias-clash on line 2:
import lib as A (z)
              ^

  Name clash: Alias not unique: "A"

